--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,6 +135,7 @@ dependencies:
   get_storage: ^2.1.1
   logger: ^2.4.0
   flutter_svg: ^2.0.10+1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
