--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,8 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
+
 }
 
 def localProperties = new Properties()
@@ -43,13 +45,13 @@ android {
 kotlinOptions {
     jvmTarget = JavaVersion.VERSION_17.toString()
 }
- 
+
     compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
     }
 
-  
+
     ndkVersion '23.1.7779620'
 
     sourceSets {
@@ -100,7 +102,7 @@ dexOptions {
             minifyEnabled true
             shrinkResources false
             //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            
+
             signingConfig signingConfigs.release
 
             proguardFiles getDefaultProguardFile('proguard-android.txt'), ' proguard-rules.pro'
