--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   #razorpay_flutter: ^1.3.6
 
   #FIREBASE
+  firebase_auth: ^5.3.3
   firebase_core: ^3.1.1
   firebase_messaging: ^15.0.1
   flutter_local_notifications: ^17.2.1+2
