--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -137,6 +137,7 @@ dependencies:
   logger: ^2.4.0
   flutter_svg: ^2.0.10+1
   carousel_slider: ^5.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
