--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -138,6 +138,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   carousel_slider: ^5.0.0
   shimmer: ^2.0.0
+  country_code_picker: ^3.1.0
 
 dev_dependencies:
   flutter_test:
