--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -139,6 +139,7 @@ dependencies:
   carousel_slider: ^5.0.0
   shimmer: ^2.0.0
   country_code_picker: ^3.1.0
+  otp_autofill: ^4.1.0
 
 dev_dependencies:
   flutter_test:
