--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,7 +55,7 @@
 			<string>Bundle Id</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.astrowaydiploy.user</string>
+				<string>com.astrokalp.user</string>
 			</array>
 		</dict>
 	</array>
